--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -60,7 +60,7 @@ const { locale, content } = Astro.props;
             name="newsletter-footer" 
             method="POST" 
             data-netlify="true"
-            action="/success"
+            action="/?success=newsletter"
             class="flex flex-col sm:flex-row w-full max-w-[676px]"
           >
             <!-- Hidden fields for Netlify -->
