--- a/src/components/VisitorFormModal.astro
+++ b/src/components/VisitorFormModal.astro
@@ -78,7 +78,7 @@ const legacyFairOptions = [
         name="visitor-form" 
         method="POST" 
         data-netlify="true" 
-        data-netlify-recaptcha="true"
+        data-netlify-honeypot="bot-field"
         action="/?success=visitor"
         class="space-y-6"
       >
@@ -86,6 +86,9 @@ const legacyFairOptions = [
         <input type="hidden" name="form-name" value="visitor-form" />
         <input type="hidden" name="form-type" value="visitor" />
         <input type="hidden" name="language" value={locale} />
+        <div style="display: none;">
+          <label>Bot Field: <input name="bot-field" /></label>
+        </div>
         
         <!-- Fair Information Section -->
         <div class="space-y-4">
@@ -281,10 +284,7 @@ const legacyFairOptions = [
           </div>
         </div>
 
-        <!-- reCAPTCHA -->
-        <div class="flex justify-center">
-          <div data-netlify-recaptcha="true"></div>
-        </div>
+
 
         <!-- Form Actions -->
         <div class="flex flex-col sm:flex-row gap-3 pt-6 border-t border-gray-200">
