--- a/src/pages/en/contact.astro
+++ b/src/pages/en/contact.astro
@@ -183,7 +183,7 @@ const offices = [
               name="contact-form-en" 
               method="POST" 
               data-netlify="true" 
-              data-netlify-recaptcha="true"
+              data-netlify-honeypot="bot-field"
               action="/en/?success=contact"
               class="max-w-4xl mx-auto space-y-8"
             >
@@ -191,6 +191,9 @@ const offices = [
               <input type="hidden" name="form-name" value="contact-form-en" />
               <input type="hidden" name="form-type" value="contact" />
               <input type="hidden" name="language" value="en" />
+              <div style="display: none;">
+                <label>Bot Field: <input name="bot-field" /></label>
+              </div>
               
               <!-- Personal Information -->
               <div class="space-y-4">
@@ -341,10 +344,7 @@ const offices = [
                 </div>
               </div>
 
-              <!-- reCAPTCHA -->
-              <div class="flex justify-center">
-                <div data-netlify-recaptcha="true"></div>
-              </div>
+
 
               <!-- Form Submit -->
               <div class="text-center pt-6 border-t border-gray-200">
